--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -10,7 +10,7 @@ address, caption, cite, code, dfn, th, var { font-style:normal; font-weight:norm
 
 ul, ol ,li{ list-style:none; }
 
-body { color:#333; font:12px "SimSun","宋体","Arial Narrow",HELVETICA; background:#fff;}
+body { color:#333; font:12px PingFangSC-Regular,Hiragino Sans GB,sans-serif; background:#fff;}
 
 a { color:#666; text-decoration:none; }
 /*清除浮动*/
@@ -20,7 +20,6 @@ body,html{
     height: 100%;
     overflow: hidden;
 }
-
 
 
 
